# python-web-scraper

./: .gitignore  Makefile  README.md  pyproject.toml
python_web_scraper/: main.py  python_web_scraper.py
