[tool.poetry]
name = "python-web-scraper"
version = "0.1.0"
description = "Web scraping project for fun"
authors = ["Ovidiu sbangu <ovidiu.sbangu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "*"
requests = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "*"
flake8 = "*"
mypy = "*"
flake8-pyproject = "*"
types-requests = "*"

[tool.poetry.group.commit]
optional = true

[tool.poetry.group.commit.dependencies]
pre-commit = "*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.flake8]
max-line-length = 120
ignore = ["E226", "E302", "E41", "W503"]

[tool.mypy]
files = ["python_web_scraper"]
ignore_missing_imports = true
no_namespace_packages = true

[tool.coverage.report]
show_missing = true
omit = [ "*__init__*", "*main.py*" ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
